# CIKnockoffPolyReg

./: .gitignore  README.md
academic_paper/: exp_all.md  experiment.tex  extract_all_metrics.py  extract_p9_results.py  extract_specific_configs.py  generate_figures.py  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
cpp/: CMakeLists.txt  README.md
cpp/baselines/: baseline_runner.cpp  baselines.cpp  baselines.hpp
cpp/bindings/: py_bindings.cpp  py_bindings.hpp
cpp/include/ic_knockoff/: knockoffs.hpp  matrix_ops.hpp  polynomial.hpp  posi.hpp
cpp/src/: knockoffs.cpp  matrix_ops.cpp  polynomial.cpp  posi.cpp
cpp/tests/: test_main.cpp
python/: README.md  pyproject.toml
python/baselines/: __init__.py  data_loader.py  improved_stlsq.py  poly_clime.py  poly_knockoff.py  poly_lasso.py  poly_omp.py  run_comparison.py  rust_baselines.py  sparse_poly_stlsq.py
python/simulations/: __init__.py  data_generator.py  data_generator_v2.py  data_generator_v3.py  run_simulation.py  visualize.py
python/src/ic_knockoff_poly_reg/: __init__.py  algorithm.py  evaluation.py  gmm_phase.py  knockoffs.py  polynomial.py  posi_threshold.py  rust_gmm.py
python/src/ic_knockoff_poly_reg/kernels/: __init__.py  base.py  cpp_kernel.py  python_kernel.py  rust_kernel.py
python/tests/: conftest.py  test_algorithm.py  test_baselines.py  test_format_consistency.py  test_kernels.py  test_knockoffs.py  test_polynomial.py  test_posi_threshold.py  test_preflight.py  test_simulation.py
rust/: Cargo.toml  README.md
rust/src/: baseline_runner.rs  baselines.rs  ffi.rs  gmm.rs  knockoffs.rs  lib.rs  main.rs  matrix.rs  poly_clime.rs  polynomial.rs  posi.rs
rust/tests/: integration_test.rs
simulation_results/: HOW_TO_RUN.md  README_EVAL.md  RUN_LARGE_SCALE.md  VERIFICATION_REPORT.md  default_sweep_summary.csv  default_sweep_summary.json  degree_nonzero_sweep_summary.csv  degree_nonzero_sweep_summary.json  generate_extreme_pivot_tables.py  report.tex  run_enhanced_experiments.py  run_experiment_extreme.py  run_experiment_extreme_v4.py  run_extreme_v4_minimal.py  run_extreme_v4_tuned.py  run_final_experiments.py  run_simulations.py  visualize_results.py
simulation_results/large_scale_results/: final_enhanced_20260325_231738.json
