[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ic-knockoff-poly-reg"
version = "0.1.0"
description = "Iterative Conditional Knockoffs for Sparse Rational Polynomial Regression (IC-Knock-Poly)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["knockoffs", "FDR", "polynomial-regression", "variable-selection", "equation-discovery"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
plots = [
    "matplotlib>=3.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
