[package]
name = "ic_knockoff_poly_reg"
version = "0.1.0"
edition = "2021"
description = "IC-Knock-Poly: Iterative Conditional Knockoffs for Sparse Rational Polynomial Regression"
license = "MIT"
keywords = ["knockoffs", "fdr-control", "polynomial-regression", "variable-selection"]
categories = ["science", "mathematics"]

[lib]
name = "ic_knockoff_poly_reg"
# cdylib: shared library loadable by Python ctypes
# rlib:   Rust library usable by other Rust crates / tests
crate-type = ["cdylib", "rlib"]

[dependencies]
# No external dependencies — uses only the standard library for correctness
# and portability.

[dev-dependencies]
# Tests use only the standard library as well.

[[bin]]
name = "ic_knockoff_demo"
path = "src/main.rs"

[[bin]]
name = "baseline_runner"
path = "src/baseline_runner.rs"
